# liteika_api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  faq.csv  pyproject.toml
alembic/: env.py
app/liteika_api/: config.py  main.py
app/liteika_api/admin/: admin.py
app/liteika_api/admin/templates/: admin.py
app/liteika_api/admin/templates/admin/: admin.html
app/liteika_api/db/: models.py  session.py
app/liteika_api/middlewares/: admin_auth.py  cors.py
app/liteika_api/routes/: __init__.py  faq.py
app/liteika_api/schemas/: faq.py
app/liteika_api/services/: faq_service.py
app/liteika_api/utils/: generate_faq_embeddings.py  import_faq.py
nginx/conf.d/: default.conf
